--- a/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
@@ -165,6 +165,10 @@
                         <li class="talking" >
                             <h1 class="lescuadron uk-text-center letra-titulo">#{alumno['more.activity.title.talk']}</h1>
                             <div>
+                                <div class="mosca">
+                                    <p>Discuss <br/> with a <br/> partner</p>
+                                </div>
+
                                <div class="fondo-more uk-position-relative uk-visible@m">
                                    <div class="more-uno">
                                        <h:outputText value="#{hablarControlador.hablarModeloLista[0].tarjeta}"/>
