--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -84,7 +84,7 @@
                             </h:selectOneMenu>
                         </div>
                     </div>
-                    <h:panelGroup layout="block" styleClass="uk-margin uk-grid uk-child-width-1-3@m" pt:uk-grid="">
+                    <h:panelGroup layout="block" styleClass="uk-margin uk-grid uk-child-width-1-2@m" pt:uk-grid="">
                         <div>
                             <div class="titulo-section uk-text-center uk-text-bold">Inicio</div>
                             <h:outputText id="fecha-inicio" value="#{dashboardProfesorControlador.cicloEscolarModelo.inicio}">
@@ -97,6 +97,8 @@
                                 <f:convertDateTime dateStyle="medium"/>
                             </h:outputText>
                         </div>
+                    </h:panelGroup>
+                    <h:panelGroup layout="block" styleClass="uk-margin uk-grid uk-child-width-1-1@m">
                         <div>
                             <div class="titulo-section uk-text-center uk-text-bold">Descripcion</div>
                             <h:outputText id="descripcion" value="#{dashboardProfesorControlador.cicloEscolarModelo.descripcion}"/>
