vista mapa mental

--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -47,7 +47,7 @@
                 </div>
                 <button uk-toggle="target: #modal-nuevo-alumno">agregar</button>
                 <h5 class="uk-text-capitalize uk-text-bold uk-margin-remove-bottom titulo-section">Alumnos de la clase</h5>
-                <h:form id="formulario-tabla-alumno">
+                <h:form id="formulario-tabla-alumno" style="display: none">
                     <div class="uk-overflow-auto">
                         <h:dataTable id="tabla-alumno"
                                      value="#{grupoAlumnoControlador.tareaAlumnoGrupoModeloLista}"
