estilos a los puntos de ordenar

--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -105,7 +105,7 @@
                 <h:form id="formulario-modal-nuevo-profesor" styleClass="uk-form-stacked">
                     <button class="uk-modal-close-default" type="button" uk-close=""/>
                     <div class="uk-modal-header header-color-card">
-                        <h2 class="uk-modal-title titulo-modal">agreagr alumno</h2>
+                        <h2 class="uk-modal-title titulo-modal">agregar alumno</h2>
                     </div>
                     <div class="barra-modal"></div>
                     <div class="uk-modal-body">
