estilos a los profes

--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -51,7 +51,8 @@
                     <div class="uk-overflow-auto">
                         <h:dataTable id="tabla-alumno"
                                      value="#{grupoAlumnoControlador.tareaAlumnoGrupoModeloLista}"
-                                     var="tarea">
+                                     var="tarea"
+                                     styleClass="juan">
                             <h:column>
                                 <f:facet name="header">id</f:facet>
                                 #{tarea.id}
