--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -11,7 +11,8 @@
 <ui:composition template="/template/profesor/dashboard-profesor.xhtml">
     <ui:define name="menu">
         <ul class="uk-subnav nav-sub uk-visible@m " uk-margin="">
-            <li class="nav-sub-active"><span class="uk-text-capitalize">home</span></li>
+            <li class="nav-sub-active">
+                <span>home</span></li>
             <li class="uk-text-uppercase"><h:link outcome="biblioteca-profesor" styleClass="letra-color-subnav uk-text-capitalize" value="library"/></li>
             <li class="uk-text-uppercase"><h:link outcome="perfil" styleClass="letra-color-subnav uk-text-capitalize" value="edit profile"/></li>
         </ul>
