Resuelve error con id repetidos

--- a/tecolotl-web/src/main/webapp/profesor/calificacion-mapamental.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/calificacion-mapamental.xhtml
@@ -51,8 +51,8 @@
                                     <h:form action="" class="uk-grid uk-child-width-1-2@m uk-form-controls" uk-grid="">
                                         <ui:repeat value="#{mapaMental.value}" var="tareaMapaMental">
                                             <div>
-                                                <h:outputLabel for="#{tareaMapaMental.codigo}" styleClass="uk-form-label" value="Pregunta"/>
-                                                <h:inputText id="#{tareaMapaMental.codigo}" value="#{tareaMapaMental.pregunta}" disabled="true"/>
+                                                <h:outputLabel styleClass="uk-form-label" value="Pregunta"/>
+                                                <h:inputText value="#{tareaMapaMental.pregunta}" disabled="true"/>
                                             </div>
                                             <div>
 
