--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -52,7 +52,7 @@
                         <h:dataTable id="tabla-alumno"
                                      value="#{grupoAlumnoControlador.tareaAlumnoGrupoModeloLista}"
                                      var="tarea"
-                                     styleClass="juan">
+                                     styleClass="uk-table-justify uk-table-small uk-table-middle uk-table-hover tablaPrimaria thPrimario">
                             <h:column>
                                 <f:facet name="header">id</f:facet>
                                 #{tarea.id}
