--- a/tecolotl-web/src/main/webapp/alumno/free-library.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/free-library.xhtml
@@ -117,7 +117,7 @@
                                             <img src="https://i.ytimg.com/vi/#{actividadModelo.idVideo}/mqdefault.jpg"/>
                                             <div class="video-error"><h:graphicImage library="img" name="video-error.svg" width="120" height="120"/> </div>
                                         </div>
-                                        <div class="uk-card-body">
+                                        <div class="uk-card-body tecolotl-card">
                                             <h6 class="uk-margin-small-bottom uk-margin-remove-adjacent uk-text-bold uk-text-small">#{actividadModelo.preguntaDetonadora}</h6>
                                             <p class="uk-text-small uk-text-muted ">#{actividadModelo.puntaje}</p>
                                         </div>
